added dynamic sizing
